set up new architecture for game client front-end and server back-end

--- a/package.json
+++ b/package.json
@@ -1,44 +1,29 @@
 {
   "name": "well-versed",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^6.2.9", 
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "1.0.0",
+  "description": "song lyric game",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node songs-server/server.js",
+    "test": "test-all"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+   "express": "^4.17.3",
+   "mongoose": "^6.2.9"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tripledawg/well-versed.git"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.9"
-  }
+  "keywords": [
+    "song",
+    "lyric",
+    "game"
+  ],
+  "author": "Leslie Crouch",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/tripledawg/well-versed/issues"
+  },
+  "homepage": "https://github.com/tripledawg/well-versed#readme"
 }
-
