--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node songs-server/server.js",
+    "seed": "node songs-server/utils/seed",
     "test": "test-all"
   },
   "dependencies": {
