--- a/game-client/package.json
+++ b/game-client/package.json
@@ -2,6 +2,7 @@
   "name": "game-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -9,7 +10,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "bootstrap": "^5.1.3",
+    "react-bootstrap": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
