added engines to package json for heroku deploy

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "lyric",
     "game"
   ],
+  "engines": {
+    "node": "^16.13.1"
+  },
   "author": "Leslie Crouch",
   "license": "MIT",
   "bugs": {
