--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node songs-server/server.js",
     "build": "cd game-client && npm install && npm run build",
     "heroku-postbuild": "node utils/seed.js",
-    "seed": "node songs-server/utils/seed",
+    "seed": "node songs-server/utils/seed.js",
     "test": "test-all"
     
   },
