--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node songs-server/server.js",
     "build": "cd game-client && npm install && npm run build",
-    "heroku-postbuild": "node utils/seed.js",
+    "heroku-postbuild": "node songs-server/utils/seed.js",
     "seed": "node songs-server/utils/seed.js",
     "test": "test-all"
     
