--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node songs-server/server.js",
-    "build": "cd game-client && npm install && npm run build",
+    "build": "cd game-client && npm install && npm start",
     "heroku-postbuild": "node songs-server/utils/seed.js",
     "seed": "node songs-server/utils/seed.js",
     "test": "test-all"
