--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "test-all",
     "heroku-postbuild": "node songs-server/utils/seed.js && npm run client-install && npm run client-build",
     "client-install": "cd client && npm install",
-    "client-build": "cd client && npm run build"
+    "client-build": "npm run build"
   },
   "dependencies": {
     "express": "^4.17.3",
