fixed home page reference in package.json

--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
   "bugs": {
     "url": "https://github.com/tripledawg/well-versed/issues"
   },
-  "homepage": "https://github.com/tripledawg/well-versed#readme"
+  "homepage": "https://github.com/tripledawg/well-versed"
 }
