user back-end complete

--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   },
   "dependencies": {
     "express": "^4.17.3",
-    "mongoose": "^6.2.9"
+    "mongoose": "^6.2.9",
+    "bcrypt": "^5.0.1",
+    "express-session": "^1.17.2",
+    "connect-mongodb-session": "^3.1.1",
+    "dotenv": "^16.0.0"
   },
   "repository": {
     "type": "git",
